--- a/src/components/ListProducts/SoldOut/SoldOut.module.scss
+++ b/src/components/ListProducts/SoldOut/SoldOut.module.scss
@@ -29,7 +29,7 @@
   }
 
   img {
-    height: 200px;
+    max-width: 12rem;
     aspect-ratio: 1/1;
     border-top-right-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
