--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,4 +1,4 @@
-$primary: black;
+$primary: #191919;
 $primary-hover: red;
 
 $secundary: blue;
@@ -18,5 +18,5 @@ $danger: red;
 
 $text-title-primary: white;
 $text-sub-title-primary: rgb(184, 196, 20);
-$text-primary-parrafo: black;
+$text-primary-parrafo: #191919;
 $text-sub: grey;
