--- a/src/components/DetailProduct/DetailProduct.module.scss
+++ b/src/components/DetailProduct/DetailProduct.module.scss
@@ -1,60 +1,54 @@
 .detailProduct {
-  background-color: #000000;
+
   position: relative;
   text-align: center;
   width: 100%;
 
   img {
-    aspect-ratio: 1/1;
+ 
     object-fit: cover;
     object-position: center center;
-    max-width: 26rem;
+    max-width: 22rem;
+    max-height: 22rem;
+    
   }
-  h6 {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    color: #b3b3b3;
-  }
+
+  // h6 {
+  //   white-space: nowrap;
+  //   overflow: hidden;
+  //   text-overflow: ellipsis;
+  //   color: #b3b3b3;
+  // }
 
   .product {
-    .description {
-      .title {
-        background: rgb(0, 0, 0);
-        background: linear-gradient(
-          0deg,
-          rgb(0, 0, 0) 0%,
-          rgba(22, 22, 22, 0.968) 34%,
-          rgba(250, 250, 250, 0) 100%
-        );
-        padding: 0.3rem;
-        position: absolute;
-        top: 57.5%;
-        width: 100%;
-        height: 23%;
-        align-items: center;
+    .description {  
+      z-index: 1;
+      .title {       
+        // position: absolute;
+        // top: 58%;
+        // width: 100%;
+        // height: 7vh;
 
         h5 {
-          text-transform: uppercase;
-          overflow: hidden;
-
-          text-overflow: ellipsis;
+          text-transform: uppercase;      
+          font-size: 1.1rem;
+          
         }
         h6 {
-          font-size: 1.5rem;
-          color:  rgb(226, 119, 5);
+          font-size: 1.2rem;
+          color: rgb(226, 119, 5);
           font-weight: 800;
         }
       }
 
       button {
         width: 95% !important;
-        background-color: #ffd814;
-        border: none;
-        color: black;
-        margin: 0.2rem 0;
+        background-color: rgb(226, 119, 5);
+        border: none;          
       }
-     
+      p{
+        padding: 1rem 0.5rem;
+      }
     }
   }
 
@@ -62,9 +56,10 @@
     padding: 10px;
 
     p {
-      margin-top: 0px;
+
       margin-bottom: 10px;
-      font-size: 1.2rem;
+      font-size: 1rem;
+      background-color: #cf0606;
     }
   }
 }
@@ -86,8 +81,6 @@
     }
 
     img {
-      border-radius: 6px;
-
       max-height: 25rem;
       object-fit: cover;
       object-position: center center;
@@ -113,39 +106,11 @@
   }
 }
 
-
-.checkbox {
-  display: none;
-}
-
-.label {
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 30px;
-  background-color: #333;
-  border-radius: 15px;
-  transition: background-color 0.3s ease;
-}
-
-.checkbox:checked + .label {
-  background-color: #4CAF50; /* Color cuando está activado */
-}
-
-.label::before {
-  content: '';
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #fff;
-  top: 0;
-  left: 0;
-  transition: transform 0.3s ease;
-}
-
-.checkbox:checked + .label::before {
-  transform: translateX(30px);
+.content_btns {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  .maxmin {
+    display: flex;    
+  }
 }
