--- a/src/components/FooterCart/FooterCart.module.scss
+++ b/src/components/FooterCart/FooterCart.module.scss
@@ -6,16 +6,14 @@
 
   .paneluser {
     display: flex;
-    background-color: #03102b;
+    background-color: #191919;
     align-items: center;
     width: 100vw;
     justify-content: space-between;
     padding-left: 1rem;
     padding-right: 1rem;
 
-    -webkit-box-shadow: -1px 1px 15px 7px rgba(134, 134, 134, 0.53);
-    -moz-box-shadow: -1px 1px 15px 7px rgba(133, 133, 133, 0.53);
-    box-shadow: -1px 1px 15px 7px rgba(134, 134, 134, 0.53);
+   
 
     .btnwsp {
       display: flex;
