--- a/src/components/ListCart/ListCart.module.scss
+++ b/src/components/ListCart/ListCart.module.scss
@@ -1,68 +1,82 @@
 .list {
-
-  padding: 0.3rem;
-  background-color: rgb(34, 34, 41);
-  height: 100vh;
+  height: 100%;
   max-width: 600px;
- 
+  margin: 3.5rem 0 6rem 0;
+
   h4 {
-    border-radius: 0.3rem;
+    position: fixed;
     background-color: rgb(226, 119, 5);
-    margin: 1rem;
     text-align: center;
     color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    width: 100%;
+    top: 0;
   }
 
-  .card {
-    align-items: center;   
-    background-color: rgba(64, 64, 75, 0.622);
+  .content {
+    background-color: rgb(38, 38, 38);
+    border: solid 0.5px #b5bac9;
     border-radius: 0.5rem;
-    display: flex;
-    margin: 0.5rem;
-    padding: 0.3rem;
+    margin: 0.8rem;
 
-    .detalle {
-      width: 100%;
-      .btnDelete {
-        cursor: pointer;
-        background-color: rgb(255, 255, 255);
-      }
-
-      .name {
-        text-transform: uppercase;
-        font-size: 0.7rem;
-        color: rgb(255, 255, 255);
-      }
-      .price {
-        font-size: 1em;
-        color: rgb(226, 119, 5);
-        font-weight: 600;
-      }
-    }
-    .btn {
+    .card {
       display: flex;
-      justify-content: space-between;
-      span {
+      padding: 0.3rem;
+
+      .detalle {
+        width: 100%;
+
+        .btnDelete {
+          cursor: pointer;
+          background-color: rgb(38, 38, 38);
+          border: none;
+        }
+
+        .name {
+          text-transform: uppercase;
+          font-size: 0.8rem;
+          color: rgb(194, 194, 194);
+        }
+        .price {
+          font-size: 1em;
+          color: rgb(226, 119, 5);
+          font-weight: 600;
+        }
+      }
+      .btn {
         display: flex;
-        align-items: center;
-        text-align: center;
+        justify-content: space-between;
+        span {
+          display: flex;
+          align-items: center;
+          text-align: center;
+        }
+
+        p {
+          font-size: 18px;
+          font-weight: 600;
+          margin-left: 1rem;
+          margin-right: 1rem;
+        }
       }
 
-      p {
-        font-size: 18px;
-        font-weight: 600;
-        margin-left: 1rem;
+      img {
+        width: 5rem;
+        height: 5rem;
+        object-fit: cover;
+        object-position: center center;
+        border-radius: 0.5rem;
+        aspect-ratio: 1/1;
         margin-right: 1rem;
       }
     }
 
-    img {
-      width: 5rem;
-      object-fit: cover;
-      object-position: center center;
-      border-radius: 0.5rem;
-      aspect-ratio: 1/1;
-      margin-right: 1rem;
+    .sauce_list {
+      background-color: #787b85;
+      li {
+        color: rgb(255, 238, 106);
+        text-transform: uppercase;
+      }
     }
   }
 }
