--- a/src/components/ListProducts/Available/Available.module.scss
+++ b/src/components/ListProducts/Available/Available.module.scss
@@ -1,26 +1,26 @@
 .list__product {   
-  background-color: rgb(39, 40, 55);
+  background-color: rgba(67, 68, 80, 0.459);
   border-radius: 0.5rem;
 
-      button {
-      width: 95% !important;
-      background-color: #ffd814;
+      button {   
+     margin: 0.5rem 0;
+      background-color: rgb(226, 119, 5);
       border: none;
-      color: black;
-      margin-bottom: 0.5rem;
+
     }  
   
-    img {    
-      aspect-ratio: 1/1;
+    img {        
       border-radius: 0.5rem 0.5rem 0 0;
+      max-width: 12rem;
       object-fit: cover;
       object-position: center center;
     }
   
     h5 {        
+      margin: 0.2rem;
       text-transform: uppercase;
       font-size: 0.8rem;    
-      color: #fffdfd;
+     
     }    
   
     .price {      
