--- a/src/components/Redes/Redes.module.scss
+++ b/src/components/Redes/Redes.module.scss
@@ -5,10 +5,8 @@
   z-index: 5;
 
   p {
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(219,250,0,1) 18%, rgba(219,250,0,1) 51%, rgba(219,250,0,1) 72%, rgba(255,255,255,1) 100%);
-    
-    color: rgb(237, 10, 89);
+    background-color: #191919;
+    padding: 0.5rem;
     font-size: 1.5rem;
     font-weight: 900;
   }
