--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -7,7 +7,7 @@ $secundary-hover: yellow;
 $text-primary: rgb(136, 8, 8);
 $text-secundary: grey;
 
-$backgroud-primary: rgb(241, 241, 241);
+$backgroud-primary: #1b2132;
 $backgroud-secundary: grey;
 $backgroud-tertiary: red;
 
