--- a/src/components/Common/BtnLink/BtnLink.module.scss
+++ b/src/components/Common/BtnLink/BtnLink.module.scss
@@ -1,7 +1,7 @@
 .btnlink {
   border-radius: 0.7rem;
   button {
-  background-color: #ffd814;
+  background-color: #ffdf00;
     height: 2.2rem;
     margin: 0.5rem;
     border: 0;
