--- a/src/components/ListCart/ListCart.module.scss
+++ b/src/components/ListCart/ListCart.module.scss
@@ -1,21 +1,18 @@
 .list {
   height: 100%;
   max-width: 600px;
-  margin: 3.5rem 0 6rem 0;
+  margin: 0 0 6rem 0;
 
   h4 {
-    position: fixed;
     background-color: rgb(226, 119, 5);
     text-align: center;
     color: rgb(255, 255, 255);
     padding: 0.3rem;
-    width: 100%;
-    top: 0;
+    width: 100%; 
   }
 
   .content {
-    background-color: rgb(38, 38, 38);
-    border: solid 0.5px #b5bac9;
+    background-color: rgb(23, 24, 48);
     border-radius: 0.5rem;
     margin: 0.8rem;
 
@@ -28,7 +25,7 @@
 
         .btnDelete {
           cursor: pointer;
-          background-color: rgb(38, 38, 38);
+          background-color: rgb(23, 24, 48);
           border: none;
         }
 
@@ -37,6 +34,7 @@
           font-size: 0.8rem;
           color: rgb(194, 194, 194);
         }
+        
         .price {
           font-size: 1em;
           color: rgb(226, 119, 5);
@@ -72,11 +70,14 @@
     }
 
     .sauce_list {
-      background-color: #787b85;
+      background-color: #054e29;
       li {
         color: rgb(255, 238, 106);
         text-transform: uppercase;
       }
+    }
+    label{
+      padding: 0.5rem;
     }
   }
 }
